--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/uikit/dist/js/uikit.min.js",
               "src/assets/js/main.js"
             ]
           },
