--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.3.1",
     "material-components-web": "^0.36.0",
     "rxjs": "^6.0.0",
+    "uikit": "^3.0.0-rc.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
